[package]
name = "httprs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = [] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-std", "fs"] }
clap = { version = "4", features = ["color", "help", "usage", "error-context", "suggestions", "derive", "wrap_help"] }
regex = { version = "1.10", features = [] }
openssl = { version = "0.10", features = ["vendored"] }
colored = { version = "2.1", features = [] }
